spec/fixtures/syntax_errors/bad.rb
class Bad
  def illegal+character
    "you can't have a + in there, dummy!"
  end
end

